--- a/recipes/Homemade_Mac_Cheese.html
+++ b/recipes/Homemade_Mac_Cheese.html
@@ -63,5 +63,6 @@
             <p>Bake in the preheated oven until topping is golden brown and macaroni and cheese is bubbling, about 30 minutes</p>
         </li>
     </ol>
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
